# my_own_nm

./: .gitignore  BinaryExplory  CMakeLists.txt  Makefile  README.md  elf_handler.c  ft_itoa_hex_t.c  lists.c  my_own_nm  my_own_nm.c  my_own_nm.h  other_file_with_a_lot_of_lengt  peda-session-10622.txt  peda-session-10769.txt  peda-session-11028.txt  peda-session-11188.txt  peda-session-33656.txt  peda-session-9642.txt  peda-session-9746.txt  shared.h  test  test.c  utils.c
arch_fiels/: arch4
binary/: test  test.c
binary/elf64/: Webserv  map_test
binary/pe64/: .a.exe.swp
elf/: elf_handler.c  elf_symbols.c  elf_utils.c
elf_srcs/: elf_handler.c  elf_header.h  elf_symbols.c  elf_utils.c
pe/: pe_handler.c
pe_srcs/: pe_handler.c  pe_header.h  pe_utils.c
system_headers/: README  elf_sys.h  pe.h  pe_sys.h
utils/: arch_system_v.c  argv_handler.c  ft_itoa_hex.c  lists.c  sort.c  utils.c  utils2.c
